--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="icon" type="image/png" href="../resources/favicon.png" />
+        <link rel="icon" type="image/png" href="resources/favicon.png" />
         <title>title</title>
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="./index.tsx"></script>
+        <script type="module" src="src/index.tsx"></script>
     </body>
 </html>
